--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,15 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Marcellus", serif;
-
+  /* font-family: "Marcellus", serif;
   font-family: "Passion One", sans-serif;
   font-family: "DM Serif Display", serif;
   font-family: "Lexend Deca", sans-serif;
   font-family: "Lato", sans-serif;
-  font-family: "Brawler", serif;
+  font-family: "Brawler", serif; */
   font-family: "Lexend Deca", sans-serif; /*
   font-family: 'Nova Square', sans-serif;/*
   font-family: 'Righteous', sans-serif;
-  
   font-family: "Sora", sans-serif; 
   */
 }
@@ -28,7 +26,6 @@ body {
   right: 0;
   bottom: 0;
   overflow-y: scroll;
-
   margin-right: -15px; /* Adjust for scrollbar width */
 }
 
@@ -39,17 +36,6 @@ body {
   margin-right: 18%;
 }
 
-/* .blankSection {
-  background-image: url(images/paper.jpg);
-  background-size:cover;
-  background-color: #b5b5b5;
-  height:20vh;
-  
-  z-index: 10;
-  display:flex;
-  position:relative;
-} */
-
 h2 {
   padding-top: 40px;
   margin-left: 18%;
@@ -59,11 +45,27 @@ h2 {
   color: white;
 }
 
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
+
+/* Project Title  */
+#projects h2 {
+  padding-top: 100px;
+  text-align: center;
+  padding-bottom: 3vh;
+  font-size: 898;
+}
+
+/* Project Grid  */
 .projectGrid {
   padding: 20px;
   border: 2px solid #000;
   display: grid;
-  grid-template-columns: repeat(2, minmax(100px, 1fr)); /* Creates 2 columns of equal width */
+  grid-template-columns: repeat(
+    2,
+    minmax(100px, 1fr)
+  ); /* Creates 2 columns of equal width */
   grid-gap: 20px; /* Adjust the gap between grid items as needed */
 
   margin-left: 18%;
@@ -77,45 +79,7 @@ h2 {
   width: 100%;
 }
 
-.projectText {
-  color: rgb(0, 0, 0);
-  font-size: 1vw;
-  text-align: center;
-  
-  padding: 20px;
-  border-radius: 1000px;
-  z-index: 5;
-  text-decoration: none;
-}
-
-.learnMore {
-  color: white;
-  background: rgb(242, 185, 194);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  padding: 20px;
-  border-radius: 1000px;
-  z-index: 2;
-  text-decoration: none;
-  border: 6px solid #ef9999;
-  font-family: "Lexend Deca", sans-serif;
-}
-
-
-.learnMore:hover {
-  color: rgb(220, 220, 220);
-  background-color: #ef9999;
-}
-
-#projects h2 {
-  padding-top: 100px;
-  text-align: center;
-  padding-bottom: 3vh;
-  font-size: 898;
-}
-
+/* The Project Container for each Project */
 .projectImage {
   border-radius: 2vh;
   width: 100%;
@@ -124,21 +88,11 @@ h2 {
   background-color: #ef9999;
   color: white;
   flex-direction: column;
-  overflow:hidden;
+  overflow: hidden;
   position: relative;
 }
 
-.video {
-  overflow: hidden;
-  
-}
-
-.projectImage video {
-  border-radius: inherit;
-  overflow: hidden;
-  object-fit: cover;
-}
-
+/* The filter */
 .glassy-filter {
   border-radius: 2vh;
   z-index: 2;
@@ -156,23 +110,62 @@ h2 {
   );
 }
 
+/* The Image/Video that goes into the Container */
 .projectImage img {
   position: relative;
-
   width: 100%;
   height: auto;
-
   border-radius: 2vh;
   z-index: 1;
 }
 
+.projectImage video {
+  border-radius: inherit;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+/* The text */
+.projectText {
+  color: rgb(0, 0, 0);
+  font-size: 1vw;
+  text-align: center;
+
+  padding: 20px;
+  border-radius: 1000px;
+  z-index: 5;
+  text-decoration: none;
+}
+
+/* Learn More Button */
+.learnMore {
+  color: white;
+  background: rgb(242, 185, 194);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  padding: 20px;
+  border-radius: 1000px;
+  z-index: 2;
+  text-decoration: none;
+  border: 6px solid #ef9999;
+  font-family: "Lexend Deca", sans-serif;
+}
+
+.learnMore:hover {
+  color: rgb(220, 220, 220);
+  background-color: #ef9999;
+}
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
+
+/* Header Navigation Bar */
 .navbar {
   border-bottom: 2px solid #000;
   background: rgb(10, 10, 10);
-
-  /* outline: 2px solid #EEEEEE; */
   width: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -197,6 +190,7 @@ h2 {
   color: #fff;
 }
 
+/* Roger Truong's Portfolio Tag */
 #logo {
   background-color: #ffffff;
   background-size: 100%;
@@ -236,25 +230,9 @@ h2 {
   color: #fff;
 }
 
-.section2 {
-  background-color: #ffffff28;
-  height: 100px; /* Adjust the height as needed */
-  width: 100%;
-  margin-top: -50px;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.section3 {
-  height: 120px; /* Adjust the height as needed */
-  width: 100%;
-  /* margin-top: 400px; */
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
 
 /* Side Navigation Bar Styles */
 .sidenav {
@@ -293,13 +271,4 @@ h2 {
 /* Change color on hover */
 .sidenav a:hover {
   background-color: #b5b5b5;
-}
-
-.footer {
-  margin-top: 10vh;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  background-color: #000000;
-  height: 30vh;
 }
