--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ h2 {
 /* Project Grid  */
 .projectGrid {
   padding: 20px;
-  border: 2px solid #000;
+  
   display: grid;
   align-items: center;
   justify-items: center;
@@ -94,7 +94,8 @@ h2 {
   border-radius: 2vh;
   width: 100%;
   display: flex;
-  border: 4px solid rgb(255, 255, 255);
+  
+  
   background-color: rgb(248, 227, 231);
   color: white;
   flex-direction: column;
@@ -114,6 +115,9 @@ h2 {
 }
 
 .filter {
+  border-bottom: 12px solid rgb(248, 227, 231);
+  border-right: 2px solid rgb(248, 227, 231);
+  border-left: 2px solid rgb(248, 227, 231);
   border-radius: inherit;
   display: flex;
   flex-direction: column;
@@ -122,7 +126,9 @@ h2 {
 }
 
 .filter::after {
-  border-radius: inherit;
+  
+  
+  
   content: "";
   position: absolute;
   width: 100%;
@@ -135,6 +141,8 @@ h2 {
 }
 
 .filter video {
+  
+  
   overflow: hidden;
   object-fit: cover;
   position: relative;
