--- a/css/about.css
+++ b/css/about.css
@@ -59,6 +59,7 @@
 .cv:hover {
   color: rgb(255, 255, 255);
   background-color: rgb(192, 192, 192);
+  text-decoration: none;
 }
 
 .aboutme_appear {
