--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ body {
 
 /* The Project Container for each Project */
 .projectImage {
+  
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   max-width: 800px;
   border-radius: 2vh;
@@ -96,13 +97,13 @@ body {
 /* The Image/Video that goes into the Container */
 .projectImage img {
   position: relative;
-  width: 100%;
-  height: auto;
+  
   border-radius: 2vh;
   z-index: 1;
 }
 
 .filter {
+  font-size: 16px;
   border-bottom: 12px solid rgb(255, 241, 241);
   border-right: 2px solid rgb(255, 241, 241);
   border-left: 2px solid rgb(255, 241, 241);
@@ -113,22 +114,42 @@ body {
   position: relative;
 }
 
-.filter::after {
+.filter::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
   background: radial-gradient(
     ellipse at center,
-    rgba(0, 0, 0, 0.2) 0%,
-    rgba(0, 0, 0, 1) 90%
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 1) 100%
   );
+  z-index: 2;
 }
 
 .filter video {
   overflow: hidden;
   object-fit: cover;
   position: relative;
+}
+
+.filter img {
+  overflow: hidden;
+  object-fit: cover;
+  position: relative;
+  min-height: 300px;
+}
+
+#vid1 video {
+  display:none;
+}
+
+#vid2 video {
+  display:none;
+}
+
+.video {
+  display: none;
 }
 
 .video::-webkit-media-controls {
@@ -144,7 +165,7 @@ body {
 /* The text */
 .projectText {
   color: rgb(0, 0, 0);
-  font-size: 1vw;
+  font-size: 20px;
   text-align: center;
 
   padding: 20px;
@@ -167,7 +188,7 @@ body {
   z-index: 2;
   text-decoration: none;
   border: 6px solid #ef9999;
-  font-size: 1vw;
+  font-size: 20px;
 }
 
 .learnMore:hover {
@@ -328,7 +349,7 @@ h2 {
 }
 
 /* ------------------------------------------------------------ */
-/* ------------------------------------------------------------ */
+/* ---------------------Side Nav------------------------------ */
 /* ------------------------------------------------------------ */
 
 /* Side Navigation Bar Styles */
@@ -363,9 +384,42 @@ h2 {
   display: block;
   transition: 0.3s;
   padding-left: 25%;
+  
 }
 
 /* Change color on hover */
 .sidenav a:hover {
+  text-decoration: none;
   background-color: #b5b5b5;
 }
+
+/* ------------------------------------------------------------ */
+/* ------------------- Project 1------------------------ */
+/* ------------------------------------------------------------ */
+
+.container {
+  margin: 0 20%;
+}
+
+.container h1 {
+  padding-top: 30px;
+  color: #ffffff;
+}
+
+.container p {
+  color: white;
+}
+
+.container h2 {
+  color:white;
+  margin: 0%;
+}
+
+.container ul {
+  color:white;
+  list-style-type: none;
+  padding-left: 0;
+}
+
+
+
